fixed card icons to not stretch

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ form button {
     background-color: lightsteelblue;
     padding: 10px;
     border-radius: 4px;
+    text-align: left;
   
   }
 
